--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@types/yargs": "^17.0.24",
+    "@types/cli-progress": "^3.11.0",
+    "cli-progress": "^3.12.0",
     "axios": "^1.0.0",
     "tslib": "^2.3.0"
   }
