--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "typescript": "~5.1.3"
   },
   "dependencies": {
-    "@types/yargs": "^17.0.24",
     "@types/cli-progress": "^3.11.0",
-    "cli-progress": "^3.12.0",
+    "@types/yargs": "^17.0.24",
     "axios": "^1.0.0",
+    "cli-progress": "^3.12.0",
+    "date-fns": "^2.30.0",
     "tslib": "^2.3.0"
   }
 }
