feat: build and readme

--- a/apps/file-organizer/project.json
+++ b/apps/file-organizer/project.json
@@ -15,7 +15,6 @@
         "bundle": false,
         "main": "apps/file-organizer/src/cli/file-organizer.ts",
         "tsConfig": "apps/file-organizer/tsconfig.app.json",
-        "assets": ["apps/file-organizer/src/assets"],
         "generatePackageJson": true,
         "esbuildOptions": {
           "sourcemap": true,
@@ -27,6 +26,10 @@
       "configurations": {
         "development": {},
         "production": {
+          "generatePackageJson": false,
+          "bundle": true,
+          "minify": true,
+          "thirdParty": true,
           "esbuildOptions": {
             "sourcemap": false,
             "outExtension": {
